--- a/src/css/Hacker.css
+++ b/src/css/Hacker.css
@@ -13,10 +13,7 @@
 }
 
 .centered {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    text-align: center;
 }
 
 
