--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,5 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+body {
+  background-color: #ff5500;
 }
 
 @keyframes App-logo-spin {
@@ -62,3 +36,13 @@
   content: "";
 }
 
+.navbar {
+  background: transparent;
+  backdrop-filter: blur(8px);
+}
+
+.navbar-brand {
+  background-color: white;
+  color: #ff5500;
+  box-shadow: #ff5500 2px 2px 2px 2px;
+}
