--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,13 @@ body {
   color: #ff5500;
   box-shadow: #ff5500 2px 2px 2px 2px;
 }
+
+.countdown-box {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: inline-block;
+  font-size: 15px;
+}
+
